src/objects/fprd__GBL_Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>fprd__Default_value__c</fullName>
        <label>Default value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__DeveloperName__c</fullName>
        <externalId>true</externalId>
        <label>Developer name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fprd__Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fprd__Header_order__c</fullName>
        <label>Header order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fprd__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fprd__Important__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fprd__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__LoV_labels__c</fullName>
        <label>Deprecated</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fprd__LoV_values__c</fullName>
        <label>Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fprd__Lower_limit__c</fullName>
        <label>Lower limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fprd__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fprd__Map_field__c</fullName>
        <label>Map field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fprd__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product configurations</relationshipLabel>
        <relationshipName>Product_configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fprd__Read_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fprd__Related_map_fields__c</fullName>
        <label>Related map fields</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fprd__Section_name__c</fullName>
        <label>Section name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__Section_order__c</fullName>
        <label>Section order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fprd__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>datetime</fullName>
                </value>
                <value>
                    <fullName>checkbox</fullName>
                </value>
                <value>
                    <fullName>LIST</fullName>
                </value>
                <value>
                    <fullName>textArea</fullName>
                </value>
                <value>
                    <fullName>textAreaLong</fullName>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>reference</fullName>
                </value>
                <value>
                    <fullName>multiselect</fullName>
                </value>
                <value>
                    <fullName>intervener</fullName>
                </value>
                <value>
                    <fullName>guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fprd__Upper_limit__c</fullName>
        <label>Upper limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fprd__Values_control_field__c</fullName>
        <label>Values control field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__Visibility_condition__c</fullName>
        <label>Visibility condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fprd__Visibility_control_field__c</fullName>
        <label>Visibility control field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fprd__Visibility_control_value__c</fullName>
        <label>Visibility control value</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product configuration</label>
    <listViews>
        <fullName>All_Products_Configurations</fullName>
        <columns>NAME</columns>
        <columns>fprd__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Product Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>